@@ -11,12 +11,12 @@ bin_SCRIPTS = automake aclocal
 info_TEXINFOS = automake.texi
 
 amfiles = clean-hdr.am clean-kr.am clean.am comp-vars.am compile.am \
-data-clean.am data.am dejagnu.am depend.am depend2.am dist-vars.am \
-footer.am header-vars.am header.am java-clean.am java.am kr-extra.am \
-library.am libs-clean.am libs.am libtool.am lisp-clean.am lisp.am \
-ltlib-clean.am ltlib.am ltlibrary.am mans-vars.am mans.am multilib.am \
-program.am progs-clean.am progs.am remake-hdr.am remake.am scripts.am \
-subdirs.am tags-clean.am tags.am texi-vers.am texinfos.am
+data-clean.am data.am dejagnu.am depend.am depend2.am dist.am \
+dist-vars.am footer.am header-vars.am header.am java-clean.am java.am \
+kr-extra.am library.am libs-clean.am libs.am libtool.am lisp-clean.am \
+lisp.am ltlib-clean.am ltlib.am ltlibrary.am mans-vars.am mans.am \
+multilib.am program.am progs-clean.am progs.am remake-hdr.am remake.am \
+scripts.am subdirs.am tags-clean.am tags.am texi-vers.am texinfos.am
 
 dist_pkgdata_DATA = COPYING INSTALL texinfo.tex ansi2knr.c ansi2knr.1 \
 $(amfiles)
