@@ -1,5 +1,12 @@
 1999-11-07  Tom Tromey  <tromey@cygnus.com>
 
+	Fix for PR automake/18:
+	* automake.in (handle_dist): Add contents of dist.am to the output
+	rules.
+	* Makefile.am (amfiles): Added dist.am.
+	* dist.am: New file.
+	(distcheck): Added uninstall and distclean checks.
+
 	* automake.in (PATH_PATTERN): Added `-' as allowable character.
 	Fixes PR automake/20.  From Matthew D. Langston.
 
